# QuaselDoku

./: .gitignore  Dockerfile  LICENSE  README.md  VorDerAnwendung.md  docker-compose.yml  doku.Dockerfile  pyproject.toml  webapp.Dockerfile
conf/base/: catalog.yml  parameters.yml
conf/base/parameters/: data_pre_processing.yml  load_test_data.yml  method_testing.yml
docs/source/: conf.py  index.rst
notebooks/: Fine_tuning_a_model.ipynb  Generate_csv.ipynb  README.md  data_loader_test.ipynb  finetune_parser.ipynb  keyword_search.ipynb  keyword_search_as_pipeline.ipynb  keyword_search_as_pipeline_with_model.ipynb  loading_squad.ipynb  method_evaluation.ipynb  parse_html.ipynb  parse_stopwods_from_doku.ipynb  parsed_doku_exploration.ipynb  parser1.ipynb  possible_parser.ipynb  test_data_annotation.ipynb  verfahrensrecherche.ipynb
src/: setup.py
src/qa_app/: app.py  doku_server.py  requirements.txt
src/qa_app/doku_server/: app.py
src/qa_app/webapp/: _init_models.py  app.py  requirements.txt
src/quaseldoku/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/quaseldoku/pipelines/data_pre_processing/: README.md  __init__.py  nodes.py  pipeline.py
src/quaseldoku/pipelines/load_test_data/: README.md  __init__.py  nodes.py  pipeline.py
src/quaseldoku/pipelines/method_testing/: README.md  __init__.py  nodes.py  pipeline.py
src/quaseldoku/qa_methods/: bert.py  helper.py  keyword_search.py  word_embeddings.py
src/tests/: test_run.py
src/tests/pipelines/data_pre_processing/: test_pipeline.py
(+3 files in other folders)
