[tool.kedro]
package_name = "quaseldoku"
project_name = "QuaselDoku"
project_version = "0.18.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/quaseldoku -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "quaseldoku"
version = "0.1.0"
description = "Deep-Learning based Q&A for the ECU-TEST documentation."
authors = ["Leonard Lehmann, Tom Gothan, Alexander Zouhar"]
license = "MIT-License"

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
gensim = "*"
black= "*"
flake8= "*"
ipython= "*"
isort= "*"
kedro-viz = "*"
kedro = "*"
jupyter= "*"
jupyterlab= "*"
kedro-telemetry= "*"
nbstripout= "*"
pytest-cov= "*"
pytest-mock= "*"
pytest= "*"
mlflow = "*"
beautifulsoup4 = "*"
transformers = {extras = ["torch"], version = "^4.18.0"}
datasets = "^2.2.0"
Whoosh = "^2.7.4"
snowballstemmer = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
